support to evaluate non-literal annotation KVs in the resolution phase